--- a/language-configuration.json
+++ b/language-configuration.json
@@ -3,13 +3,14 @@
         // symbol used for single line comment. Remove this entry if your language does not support line comments
         "lineComment": "//",
         // symbols used for start and end a block comment. Remove this entry if your language does not support block comments
-        "blockComment": [ "/*", "*/" ]
+        "blockComment": [ "#$COMMENT$#", "" ]
     },
     // symbols used as brackets
     "brackets": [
         ["{", "}"],
         ["[", "]"],
-        ["(", ")"]
+		["(", ")"],
+        ["<", ">"]
     ],
     // symbols that are auto closed when typing
     "autoClosingPairs": [
@@ -17,7 +18,18 @@
         ["[", "]"],
         ["(", ")"],
         ["\"", "\""],
-        ["'", "'"]
+        ["'", "'"],
+		["<", ">"],
+		["#$STRING_START$#", "#$STRING_END$#"],
+		["#$ITEM_TYPE$#", ""],
+		["#$TYPE$#", ""],
+		["#$NAME$#", ""],
+		["#$ARGS$#", ""],
+		["#$BODY$#", ""],
+		["#$GEN_BODY$#", ""],
+		["#$PPP$#", ""],
+		["#$PRESETS$#", ""],
+		["#$METHOD_IS_CONST$#", ""]
     ],
     // symbols that can be used to surround a selection
     "surroundingPairs": [
@@ -25,6 +37,16 @@
         ["[", "]"],
         ["(", ")"],
         ["\"", "\""],
-        ["'", "'"]
+		["'", "'"],
+		["#$STRING_START$#", "#$STRING_END$#"],
+		["#$ITEM_TYPE$#", ""],
+		["#$TYPE$#", ""],
+		["#$NAME$#", ""],
+		["#$ARGS$#", ""],
+		["#$BODY$#", ""],
+		["#$GEN_BODY$#", ""],
+		["#$PPP$#", ""],
+		["#$PRESETS$#", ""],
+		["#$METHOD_IS_CONST$#", ""]
     ]
 }
