--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
             "language": "gls",
             "scopeName": "source.gls",
             "path": "./syntaxes/gls.tmLanguage.json"
-        }]
+        },
+        {
+            "path": "./syntaxes/xmltoheaderinjection.json",
+            "scopeName": "xml-block.injection",
+            "injectTo": ["source.cpp", "source.h"]
+        }
+     ]
     }
 }
