added repository field

--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
             "injectTo": ["source.cpp", "source.h"]
         }
      ]
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/zmurf/glssyntax.git"
     }
 }
