added syntax injection for C language also... since .h files sometimes opens as that type.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         {
             "path": "./syntaxes/xmltoheaderinjection.json",
             "scopeName": "xml-block.injection",
-            "injectTo": ["source.cpp", "source.h"]
+            "injectTo": ["source.c", "source.cpp", "source.h"]
         }
      ]
     },
