--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/zmurf/glssyntax.git"
-    }
+    },
+    "icon": "./icon.png"
 }
